--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,17 @@ DB_NAME=receipt_analyzer
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=redis123
 
 # OCR Configuration
 TESSERACT_LANG=fra+eng
 OCR_CONFIDENCE_THRESHOLD=60
+
+# OpenAI Configuration (REQUIRED - Get your API key from https://platform.openai.com/api-keys)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_MAX_TOKENS=1000
+OPENAI_TEMPERATURE=0.1
 
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
@@ -46,8 +52,9 @@ LOG_FILE=./logs/app.log
 
 # Processing
 PROCESSING_TIMEOUT_MS=30000
-QUEUE_CONCURRENCY=5# Cache 
-Configuration
+QUEUE_CONCURRENCY=5
+
+# Cache Configuration
 CACHE_DEFAULT_TTL=3600
 CACHE_STATUS_TTL=30
 CACHE_RESULT_TTL=3600
