--- a/package.json
+++ b/package.json
@@ -10,43 +10,58 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "check:redis": "node scripts/check-redis.js",
+    "wait:redis": "node scripts/check-redis.js wait",
+    "check:openai": "node scripts/check-openai.js",
+    "test:rate-limiter": "node test-rate-limiter.js",
+    "start:with-redis": "npm run wait:redis && npm start",
+    "dev:with-redis": "npm run check:redis && npm run dev",
+    "check:all": "npm run check:redis && npm run check:openai"
   },
-  "keywords": ["receipt", "ocr", "api", "typescript", "express"],
+  "keywords": [
+    "receipt",
+    "ocr",
+    "api",
+    "typescript",
+    "express"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bull": "^4.12.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "openai": "^6.7.0",
+    "rate-limit-redis": "^4.2.3",
+    "redis": "^4.6.10",
     "sharp": "^0.32.6",
     "tesseract.js": "^5.0.2",
-    "bull": "^4.12.2",
-    "redis": "^4.6.10",
-    "mongoose": "^8.0.3",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "express-rate-limit": "^7.1.5",
     "uuid": "^9.0.1",
-    "compression": "^1.7.4"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
     "@types/bull": "^4.10.0",
-    "@types/uuid": "^9.0.7",
-    "@types/node": "^20.10.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2",
-    "@types/compression": "^1.7.5"
+    "typescript": "^5.3.2"
   }
 }
